custom crossref for link to file in Supplementary

--- a/example-html.html
+++ b/example-html.html
@@ -132,7 +132,7 @@ window.Quarto = {
 <img src="images/512px-Chaffinch_(Fringilla_coelebs).jpg" class="img-fluid figure-img" data-ref-parent="fig-subspecies">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-coelebs-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-(a) <em>F. c.&nbsp;coelebs</em>
+(a) <em>F. c. coelebs</em>
 </figcaption>
 </figure>
 </div>
@@ -144,7 +144,7 @@ window.Quarto = {
 <img src="images/512px-Fringilla_coelebs_palmae_-_Los_Tilos.jpg" class="img-fluid figure-img" data-ref-parent="fig-subspecies">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-canariensis-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-(b) <em>F. c.&nbsp;palmae</em>
+(b) <em>F. c. palmae</em>
 </figcaption>
 </figure>
 </div>
@@ -156,7 +156,7 @@ Figure&nbsp;1: Adult male <em>Fringilla coelebs</em> of the coelebs group on the
 </figcaption>
 </figure>
 </div>
-<p>This study sought to determine whether the two subspecies differ in mass.</p>
+<p>This study sought to determine whether the two subspecies differ in mass. The raw data are in <a href="#suppfile-chaff" class="quarto-xref">File S1</a>.</p>
 </section>
 <section id="methods" class="level1">
 <h1>Methods</h1>
@@ -262,6 +262,16 @@ Table&nbsp;1: Summary of mass(g) for the two subspecies of chaffinch.
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-suppfig" id="suppfig-chaff-dist2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure S1: Here’s that same figure again, but this time it’s in the supplemental material.
 </figcaption>
+</figure>
+</div>
+<div id="suppfile-chaff" class="quarto-float">
+<figure class="quarto-float quarto-float-suppfile figure">
+<figcaption class="quarto-float-caption-top quarto-float-caption quarto-float-suppfile quarto-uncaptioned" id="suppfile-chaff-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+File S1
+</figcaption>
+<div aria-describedby="suppfile-chaff-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<p><a href="data/chaff.txt">chaff.txt</a></p>
+</div>
 </figure>
 </div>
 </section>
