fix link to supplemental data

--- a/example-html.html
+++ b/example-html.html
@@ -270,7 +270,7 @@ Figure S1: Here’s that same figure again, but this time it’s in the suppleme
 File S1
 </figcaption>
 <div aria-describedby="suppfile-chaff-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<p><a href="data/chaff.txt">chaff.txt</a></p>
+<p><a href="data-raw/chaff.txt">chaff.txt</a></p>
 </div>
 </figure>
 </div>
