--- a/example-html.html
+++ b/example-html.html
@@ -120,7 +120,7 @@ window.Quarto = {
 
 <section id="introduction" class="level1">
 <h1>Introduction</h1>
-<p>A number of <a href="https://en.wikipedia.org/wiki/Common_chaffinch">subspecies of the common chaffinch, <em>Fringilla coelebs</em></a>, have been described based principally on the differences in the pattern and colour of the adult male plumage <span class="citation" data-cites="suárez2009">(<a href="#ref-suárez2009" role="doc-biblioref">Suárez et al. 2009</a>)</span>. Two of groups of these subspecies are the “coelebs group” (<a href="#fig-coelebs" class="quarto-xref">Figure&nbsp;1 (a)</a>) that occurs in Europe and Asia and the “canariensis group” (<a href="#fig-canariensis" class="quarto-xref">Figure&nbsp;1 (b)</a>) that occurs on the Canary Islands.</p>
+<p>A number of <a href="https://en.wikipedia.org/wiki/Common_chaffinch">subspecies of the common chaffinch, <em>Fringilla coelebs</em></a>, have been described based principally on the differences in the pattern and colour of the adult male plumage <span class="citation" data-cites="suárez2009">(<a href="#ref-suárez2009" role="doc-biblioref">Suárez et al. 2009</a>)</span>. Two of groups of these subspecies are the “coelebs group” (<a href="#fig-coelebs" class="quarto-xref">Figure&nbsp;1 (a)</a>) that occurs in Europe and Asia and the “canariensis group” (<a href="#fig-canariensis" class="quarto-xref">Figure&nbsp;1 (b)</a>) that occurs on the Canary Islands. Or in Supplementary <a href="#suppfig-subspecies2" class="quarto-xref">Figure S2</a>!</p>
 <div id="fig-subspecies" class="quarto-layout-panel">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-subspecies-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
@@ -258,8 +258,23 @@ Wickham, Hadley, Mara Averick, Jennifer Bryan, Winston Chang, Lucy D’Agostino 
 </div>
 </section>
 </section>
-<section id="supplemental-figures" class="level1">
-<h1>Supplemental Figures</h1>
+<section id="supplemental" class="level1">
+<h1>Supplemental</h1>
+<section id="files" class="level2">
+<h2 class="anchored" data-anchor-id="files">Files</h2>
+<div id="suppfile-chaff" class="quarto-float">
+<figure class="quarto-float quarto-float-suppfile figure">
+<figcaption class="quarto-float-caption-top quarto-float-caption quarto-float-suppfile quarto-uncaptioned" id="suppfile-chaff-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+File S1
+</figcaption>
+<div aria-describedby="suppfile-chaff-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<p><a href="data-raw/chaff.txt">chaff.txt</a></p>
+</div>
+</figure>
+</div>
+</section>
+<section id="figures" class="level2">
+<h2 class="anchored" data-anchor-id="figures">Figures</h2>
 <div id="suppfig-chaff-dist2" class="quarto-float">
 <figure class="quarto-float quarto-float-suppfig figure">
 <div aria-describedby="suppfig-chaff-dist2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
@@ -278,16 +293,42 @@ Figure S1: Here’s that same figure again, but this time it’s in the suppleme
 </figcaption>
 </figure>
 </div>
-<div id="suppfile-chaff" class="quarto-float">
-<figure class="quarto-float quarto-float-suppfile figure">
-<figcaption class="quarto-float-caption-top quarto-float-caption quarto-float-suppfile quarto-uncaptioned" id="suppfile-chaff-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-File S1
-</figcaption>
-<div aria-describedby="suppfile-chaff-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<p><a href="data-raw/chaff.txt">chaff.txt</a></p>
+<div id="suppfig-subspecies2" class="quarto-layout-panel">
+<figure class="quarto-float quarto-float-suppfig figure">
+<div aria-describedby="suppfig-subspecies2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<div class="quarto-layout-row">
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="suppfig-subspecies2" style="flex-basis: 50.0%;justify-content: flex-start;">
+<div id="suppfig-coelebs2" class="quarto-float">
+<figure class="quarto-float quarto-subfloat-suppfig figure">
+<div aria-describedby="suppfig-coelebs2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="images/512px-Chaffinch_(Fringilla_coelebs).jpg" class="img-fluid figure-img" data-ref-parent="suppfig-subspecies2">
 </div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-suppfig" id="suppfig-coelebs2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(a) <em>F. c. coelebs</em>
+</figcaption>
 </figure>
 </div>
+</div>
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="suppfig-subspecies2" style="flex-basis: 50.0%;justify-content: flex-start;">
+<div id="suppfig-canariensis2" class="quarto-float">
+<figure class="quarto-float quarto-subfloat-suppfig figure">
+<div aria-describedby="suppfig-canariensis2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="images/512px-Fringilla_coelebs_palmae_-_Los_Tilos.jpg" class="img-fluid figure-img" data-ref-parent="suppfig-subspecies2">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-suppfig" id="suppfig-canariensis2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(b) <em>F. c. palmae</em>
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-suppfig" id="suppfig-subspecies2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure S2: Adult male <em>Fringilla coelebs</em> of the coelebs group on the left (Andreas Trepte, CC BY-SA 2.5 <a href="https://creativecommons.org/licenses/by-sa/2.5" class="uri">https://creativecommons.org/licenses/by-sa/2.5</a>, via Wikimedia Commons) and of the canariensis group on the right (H. Zell, CC BY-SA 3.0 <a href="https://creativecommons.org/licenses/by-sa/3.0" class="uri">https://creativecommons.org/licenses/by-sa/3.0</a>, via Wikimedia Commons).
+</figcaption>
+</figure>
+</div>
+</section>
 </section>
 
 </main>
