multipanel fig to both html and pdf

--- a/example-html.html
+++ b/example-html.html
@@ -239,6 +239,98 @@ Table&nbsp;1: Summary of mass(g) for the two subspecies of chaffinch.
 </figure>
 </div>
 </div>
+<p>I have created a mutli-column figure with mixed content. Take a look at <a href="#fig-mixedcontent" class="quarto-xref">Figure&nbsp;4</a>. You can see two histograms in <a href="#fig-hist" class="quarto-xref">Figure&nbsp;4 (a)</a> and <a href="#fig-hist2" class="quarto-xref">Figure&nbsp;4 (b)</a>. There is also a photo of a chaffinch in <a href="#fig-coelebs2" class="quarto-xref">Figure&nbsp;4 (c)</a>.</p>
+<div id="fig-mixedcontent" class="quarto-layout-panel">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-mixedcontent-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<div class="quarto-layout-row">
+<div class="cell quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-mixedcontent" style="flex-basis: 50.0%;justify-content: flex-start;">
+<div class="cell-output-display quarto-layout-cell-subref" data-ref-parent="fig-mixedcontent">
+<div id="fig-hist" class="quarto-figure quarto-figure-center quarto-float anchored" width="672">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-hist-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="example-html_files/figure-html/fig-hist-1.png" id="fig-hist" class="img-fluid figure-img" data-ref-parent="fig-mixedcontent" width="672">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-hist-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(a)
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+<div class="cell quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-mixedcontent" style="flex-basis: 50.0%;justify-content: flex-start;">
+<div class="cell-output-display quarto-layout-cell-subref" data-ref-parent="fig-mixedcontent">
+<div id="fig-hist2" class="quarto-figure quarto-figure-center quarto-float anchored" width="672">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-hist2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="example-html_files/figure-html/fig-hist2-1.png" id="fig-hist2" class="img-fluid figure-img" data-ref-parent="fig-mixedcontent" width="672">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-hist2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(b)
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+</div>
+<div class="quarto-layout-row">
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-mixedcontent" style="flex-basis: 50.0%;justify-content: flex-start;">
+<div id="fig-coelebs2" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-coelebs2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="images/512px-Chaffinch_(Fringilla_coelebs).jpg" class="img-fluid figure-img" data-ref-parent="fig-mixedcontent">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-coelebs2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(c) <em>F. c. coelebs</em>
+</figcaption>
+</figure>
+</div>
+</div>
+<div class="cell quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-mixedcontent" style="flex-basis: 50.0%;justify-content: center;">
+<div id="fig-table" class="cell-output-display quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-table-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<table class="table table-sm table-striped small">
+<thead>
+<tr class="header">
+<th style="text-align: left;">Subspecies</th>
+<th style="text-align: right;">Mean</th>
+<th style="text-align: right;">Sd</th>
+<th style="text-align: right;">N</th>
+<th style="text-align: right;">Se</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">Canariensis</td>
+<td style="text-align: right;">22</td>
+<td style="text-align: right;">2.1</td>
+<td style="text-align: right;">20</td>
+<td style="text-align: right;">0.48</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Coelebs</td>
+<td style="text-align: right;">20</td>
+<td style="text-align: right;">2.1</td>
+<td style="text-align: right;">20</td>
+<td style="text-align: right;">0.48</td>
+</tr>
+</tbody>
+</table>
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-table-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(d) Summary of mass(g) for the two subspecies of chaffinch.
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-mixedcontent-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;4: A figure with a some plots and a photo. Thre’s even a table in there although, IMO tables should not be in figures, but placed separately. I had to use the fig- prefix in the label to get make it be treated like a figure with caption below etc.
+</figcaption>
+</figure>
+</div>
 </section>
 <section id="discussion" class="level1">
 <h1>Discussion</h1>
@@ -273,8 +365,8 @@ File S1
 </figure>
 </div>
 </section>
-<section id="figures" class="level2">
-<h2 class="anchored" data-anchor-id="figures">Figures</h2>
+<section id="section" class="level2">
+<h2 class="anchored" data-anchor-id="section"></h2>
 <div id="suppfig-chaff-dist2" class="quarto-float">
 <figure class="quarto-float quarto-float-suppfig figure">
 <div aria-describedby="suppfig-chaff-dist2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
@@ -282,7 +374,7 @@ File S1
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="example-html_files/figure-html/unnamed-chunk-11-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="example-html_files/figure-html/unnamed-chunk-14-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
